--------------------------------------------------------------------------------
skipik 2024-11-26 17:23:11+03:00 - build 6395

1. SQLite v3.47.1.

--------------------------------------------------------------------------------
drkns 2024-11-22 19:07:44+00:00 - build 6394

1. Show device name in Attributes dialog invoked on a device.

--------------------------------------------------------------------------------
drkns 2024-11-21 22:53:34+00:00 - build 6393

1. Refactoring.

2. Exception handling improvements.

--------------------------------------------------------------------------------
drkns 2024-11-21 02:07:01+00:00 - build 6392

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2024-11-20 01:14:20+00:00 - build 6391

1. Refactoring.

2. Exception handling improvements.

3. Warnings.

--------------------------------------------------------------------------------
drkns 2024-11-19 01:13:08+00:00 - build 6390

1. Refactoring.

2. Improve keyboard layouts detection.

3. Log detected keyboard layouts.

--------------------------------------------------------------------------------
drkns 2024-11-04 18:56:51+00:00 - build 6389

1. Fix replacing empty strings in Editor.

--------------------------------------------------------------------------------
drkns 2024-10-31 20:22:20+00:00 - build 6388

1. Continue 6385.5.

--------------------------------------------------------------------------------
drkns 2024-10-29 18:54:27+00:00 - build 6387

1. Continue 6385.5.

--------------------------------------------------------------------------------
drkns 2024-10-29 02:35:48+00:00 - build 6386

1. Continue 6385.5.

--------------------------------------------------------------------------------
drkns 2024-10-26 20:17:00+01:00 - build 6385

1. Show elevation type in InfoPanel & bug reports.

2. Preserve inherited attributes when saving files.

3. Fix power notifications when 2 InfoPanels are opened simultaneously.
