@@ -378,6 +378,20 @@ void Options::InterfaceSettings()
 		Panels->SetScreenPosition();
 		// $ 10.07.2001 SKV ! надо это делать, иначе если кейбар спрятали, будет полный рамс.
 		Panels->Redraw();
+
+		if (FullWidthAwareRendering && char_width::is_grapheme_clusters_on())
+		{
+			Message(FMSG_WARNING, msg(lng::MWarning),
+			{
+				msg(lng::MConfigFullWidthAwareRenderingGraphemeClustersDected1),
+				msg(lng::MConfigFullWidthAwareRenderingGraphemeClustersDected2),
+				msg(lng::MConfigFullWidthAwareRenderingGraphemeClustersDected3),
+				msg(lng::MConfigFullWidthAwareRenderingGraphemeClustersDected4),
+			},
+			{
+				lng::MOk
+			});
+		}
 	}
 }
 
