@@ -2871,6 +2871,62 @@ upd:"Рендерінг з урахуванням повної ширини"
 "Візуалізацыя з улікам поўнай шырыні"
 upd:"Fullwidth-aware rendering"
 
+MConfigFullWidthAwareRenderingGraphemeClustersDected1
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+upd:"It appears that your terminal supports Unicode grapheme clusters."
+
+MConfigFullWidthAwareRenderingGraphemeClustersDected2
+upd:"Unfortunately, Far does not support them yet."
+"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+upd:"Unfortunately, Far does not support them yet."
+
+MConfigFullWidthAwareRenderingGraphemeClustersDected3
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+upd:"For best experience it is recommended to switch to codepoint-based rendering."
+
+MConfigFullWidthAwareRenderingGraphemeClustersDected4
+upd:"Consult the documentation of your terminal for advice on how to do this."
+"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+upd:"Consult the documentation of your terminal for advice on how to do this."
+
 MConfigClearType
 "Перер&исовка с поддержкой ClearType (может быть медленной)"
 "Cl&earType-friendly redraw (can be slow)"
