@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2024-11-30 23:34:14+00:00 - build 6396
+
+1. Warn the user when the terminal uses grapheme clusters.
+
+--------------------------------------------------------------------------------
 skipik 2024-11-26 17:23:11+03:00 - build 6395
 
 1. SQLite v3.47.1.
